# Miniscop

./: Cargo.toml  README.md
assets/gift_plane/3d/: Gift_Plane.glb
assets/mainmenu/3d/: Title.glb
assets/overworld/3d/: Gift_Plane.glb
audacity_files/: Rainer - Petscop Soundtrack - 08 SFX 1.aup3-shm  Rainer - Petscop Soundtrack - 08 SFX 1.aup3-wal
blender_files/: Gift_Plane.blend  Gift_Plane.blend1  Title.blend1
blender_files/Gift_Plane/: Gift_Plane.blend  Gift_Plane.blend1
blender_files/Title/: Title.blend
src/: main.rs  networking.rs  packets.rs  plugins.rs  states.rs
src/plugins/: garalina.rs  mainmenu.rs  overworld.rs
