[package]
name = "miniscop"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/KingRocco21/Miniscop"
license = "AGPL-3"


[dependencies]
# Both client and server
quinn = "0.11.8"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
# Client
bevy = { version = "0.16.1", features = ["bevy_dev_tools"] }
bevy_sprite3d = "5.0.0"
# Server
clap = { version = "4.5.40", features = ["derive"] }
rustls-pki-types = "1.12.0"
bincode = "2.0.1"



# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
